--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Samyo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^5.11.1",
